SERVER-83146 Bulk write operation might fail with `NamespaceNotFound`

GitOrigin-RevId: 9eea1836e47c9ee7ae5287669961eb44776a8d18