src/mongo/s/chunk_manager_targeter.h
@@ -120,6 +120,9 @@ public:
         const TimeseriesOptions& timeseriesOptions);
 
 private:
+    // Maximum number of database creation attempts, which may fail due to a concurrent drop.
+    static const size_t kMaxDatabaseCreationAttempts;
+
     ChunkManager _init(OperationContext* opCtx, bool refresh);
 
     /**
